[gd_scene load_steps=76 format=2]

[ext_resource path="res://Art/sprites/characters/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerScript.gd" type="Script" id=2]
[ext_resource path="res://Art/COIN FACE.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Trail.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Healing.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 1 )
region = Rect2( 48, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 1 )
region = Rect2( 96, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 1 )
region = Rect2( 144, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 48, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 96, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 192, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 1 )
region = Rect2( 48, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 1 )
region = Rect2( 96, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 1 )
region = Rect2( 144, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 240, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 1 )
region = Rect2( 0, 432, 48, 48 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 1 )
region = Rect2( 48, 432, 48, 48 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 1 )
region = Rect2( 96, 432, 48, 48 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 48, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 96, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 144, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ) ],
"loop": true,
"name": "back_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "back_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "back_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ) ],
"loop": true,
"name": "front_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "front_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "front_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": true,
"name": "player_dead",
"speed": 5.0
}, {
"frames": [ SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "side_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "side_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "side_walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=56]

[sub_resource type="CircleShape2D" id=93]
radius = 26.069

[sub_resource type="GDScript" id=109]
script/source = "extends CollisionShape2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="Animation" id=110]
resource_name = "Damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ), Vector2( 0, -20 ), Vector2( 0, -20 ), Vector2( 0, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1.2, 0 ), Vector2( 1.2, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=119]
length = 0.001

[sub_resource type="Animation" id=112]
resource_name = "Regen"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.0156863, 1 ), Color( 0, 1, 0.0156863, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=111]
resource_name = "Speed"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 1, 1 ), Color( 0, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=113]
resource_name = "Strength"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0.74902, 1 ), Color( 1, 0, 0.74902, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=123]
offsets = PoolRealArray( 0, 0.305556, 0.988095 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.109804, 1, 1, 1, 0.984605 )

[sub_resource type="GradientTexture" id=124]
gradient = SubResource( 123 )

[sub_resource type="Curve" id=121]
_data = [ Vector2( 0.04, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.192727, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.792727, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=122]
curve = SubResource( 121 )

[sub_resource type="ParticlesMaterial" id=120]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 1000, 0 )
initial_velocity = 180.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
scale = 0.2
scale_curve = SubResource( 122 )
color_ramp = SubResource( 124 )

[sub_resource type="Gradient" id=126]
offsets = PoolRealArray( 0, 0.654762, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.0980392, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=127]
gradient = SubResource( 126 )

[sub_resource type="Curve" id=128]
_data = [ Vector2( 0.0618182, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.210909, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.789091, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=129]
curve = SubResource( 128 )

[sub_resource type="ParticlesMaterial" id=125]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, -450, 0 )
initial_velocity = 25.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
scale = 0.03
scale_curve = SubResource( 129 )
color_ramp = SubResource( 127 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 15
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 55 )
animation = "player_dead"
offset = Vector2( 0, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 56 )

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2( 0, -7.14286 )
shape = SubResource( 93 )
script = SubResource( 109 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="DealAttackTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="TimeOfSpeed" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 110 )
anims/RESET = SubResource( 119 )
anims/Regen = SubResource( 112 )
anims/Speed = SubResource( 111 )
anims/Strength = SubResource( 113 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 2.85714, -20 )
scale = Vector2( 1, 1 )
emitting = false
amount = 1
lifetime = 0.3
one_shot = true
process_material = SubResource( 120 )
texture = ExtResource( 3 )

[node name="Trail" parent="." instance=ExtResource( 4 )]
position = Vector2( 11.4286, 5.71429 )
points = PoolVector2Array( -15.7143, -10 )
length = 20

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 2.85714, -12.8572 )
emitting = false
amount = 1
lifetime = 0.6
one_shot = true
process_material = SubResource( 125 )
texture = ExtResource( 5 )

[node name="RegenTimerEffect" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="DealAttackTimer" to="." method="_on_DealAttackTimer_timeout"]
[connection signal="timeout" from="TimeOfSpeed" to="." method="_on_TimeOfSpeed_timeout"]
[connection signal="timeout" from="RegenTimerEffect" to="." method="_on_RegenTimerEffect_timeout"]
